# CodeIngest

./: .gitignore  README.md  pyproject.toml
codeingest/: chain.py  environ.py  main.py
