[tool.poetry]
name = "codeingest"
version = "0.1.0"
description = ""
authors = ["Jean-Luc Thumm <jeanlucthumm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.5.3"
watchdog = "^4.0.1"
langchain = "^0.2.6"
langchain-openai = "^0.1.13"
langchain-community = "^0.2.6"
langchainhub = "^0.1.20"
langchain-chroma = "^0.1.2"
b4 = "^0.14.0"

[tool.poetry.scripts]
codeingest = "codeingest.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
